--- a/Registry/View/EditPerson/PersonAddressesView.xaml
+++ b/Registry/View/EditPerson/PersonAddressesView.xaml
@@ -48,13 +48,13 @@
     <DataTemplate  DataType="{x:Type registry:PersonAddressesViewModel}">
         <DockPanel Width="500" VerticalAlignment="Stretch" LastChildFill="True">
             <Button DockPanel.Dock="Bottom"  HorizontalAlignment="Stretch" Height="24"  Command="{Binding AddPersonAddressCommand}" Content="Добавить" Margin="5" />
-            <TextBlock VerticalAlignment="Center" HorizontalAlignment="Center" TextAlignment="Center" Height="46" Text="Нет ни одного адреса. Чтобы создать адрес, нажмите кнопку 'Добавить'" Foreground="Gray" Background="Aqua"
+            <TextBlock VerticalAlignment="Center" HorizontalAlignment="Stretch" TextAlignment="Center" Height="46" Text="Нет ни одного адреса. Чтобы создать адрес, нажмите кнопку 'Добавить'" Foreground="Gray"
                                            Visibility="{Binding PersonAddressesHasNoItems, Converter={StaticResource BooleanToVisibilityConverter}}"/>
             <ScrollViewer MinHeight="100" MaxHeight="750" VerticalScrollBarVisibility="Auto">
                 <ItemsControl BorderThickness="1" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" ItemsSource="{Binding PersonAddresses}" Margin="5">
                     <ItemsControl.ItemTemplate>
                         <DataTemplate>
-                            <Grid HorizontalAlignment="Stretch" MinWidth="320" MinHeight="54" VerticalAlignment="Stretch" >
+                            <Grid HorizontalAlignment="Stretch" MinWidth="320" MinHeight="54" VerticalAlignment="Stretch" Margin="0,0,20,0">
                                 <Grid.RowDefinitions>
                                     <RowDefinition Height="auto" />
                                     <RowDefinition Height="Auto" />
@@ -87,14 +87,15 @@
 
                                 <TextBlock Grid.Row="1" Grid.Column="0" Margin="2" Text="Вид адреса" />
                                 <ComboBox Grid.Row="1" Grid.Column="1" Grid.ColumnSpan="6" Margin="2" ItemsSource="{Binding DataContext.ListAddressTypes, Mode=OneTime, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type ItemsControl}}}"
-                                  DisplayMemberPath="Name" SelectedValuePath="Id" SelectedValue="{Binding AddressTypeId}" />
+                                  DisplayMemberPath="Name" SelectedValuePath="Id" SelectedValue="{Binding AddressTypeId, ValidatesOnDataErrors=True}" Validation.ErrorTemplate="{DynamicResource ValidationTemplate}" />
 
                                 <TextBlock Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="6" Margin="2" Text="Регион/иностранное государство" />
                                 <wpf:AutoCompleteTextBox Grid.Row="3" Grid.Column="0" Grid.ColumnSpan="6" Margin="2" Background="White"
                                  Watermark="введите слова из названия региона или иностранного государства"
                                  DisplayMember="FullName"
                                  ItemTemplate="{StaticResource AutoCompleteTemplate}"
-                                 SelectedItem="{Binding RegionOKATO, Mode=TwoWay}"
+                                 SelectedItem="{Binding RegionOKATO, Mode=TwoWay, ValidatesOnDataErrors=True}"
+                                 Validation.ErrorTemplate="{DynamicResource ValidationTemplate}"
                                  IconPlacement="Left"
                                  IconVisibility="Visible"
                                  Provider="{Binding OkatoRegionSuggestionProvider}"
@@ -109,7 +110,8 @@
                                  Watermark="введите слова из названия города, села, улицы и др."
                                  DisplayMember="FullName"
                                  ItemTemplate="{StaticResource AutoCompleteTemplate}"
-                                 SelectedItem="{Binding AddressOKATO, Mode=TwoWay}"
+                                 SelectedItem="{Binding AddressOKATO, Mode=TwoWay, ValidatesOnDataErrors=True}"
+                                 Validation.ErrorTemplate="{DynamicResource ValidationTemplate}"
                                  IconPlacement="Left"
                                  IconVisibility="Visible"
                                  Provider="{Binding OkatoSuggestionProvider}"
@@ -120,19 +122,21 @@
                                 </wpf:AutoCompleteTextBox>
 
                                 <TextBlock Grid.Row="6" Grid.Column="0" Margin="2" Text="По документу" />
-                                <TextBox Grid.Row="7" Grid.Column="0" Grid.ColumnSpan="6" Margin="2" Text="{Binding UserText}" />
+                                <TextBox Grid.Row="7" Grid.Column="0" Grid.ColumnSpan="6" Margin="2" Text="{Binding UserText, ValidatesOnDataErrors=True}" Validation.ErrorTemplate="{DynamicResource ValidationTemplate}"/>
 
                                 <TextBlock Grid.Row="8" Grid.Column="0" Margin="2" Text="Дом"/>
-                                <TextBox Grid.Row="8" Grid.Column="1" Margin="2" Text="{Binding House}"/>
-                                <TextBlock Grid.Row="8" Grid.Column="2" Margin="2" Text="Корпус"/>
+                                <TextBox Grid.Row="8" Grid.Column="1" Margin="2" Text="{Binding House, ValidatesOnDataErrors=True}" Validation.ErrorTemplate="{DynamicResource ValidationTemplate}"/>
+                                <TextBlock Grid.Row="8" Grid.Column="2" Margin="22,2,2,2" Text="Корпус" HorizontalAlignment="Right"/>
                                 <TextBox Grid.Row="8" Grid.Column="3" Margin="2" Text="{Binding Building}"/>
                                 <TextBlock Grid.Row="8" Grid.Column="4" Margin="2" Text="Квартира"/>
                                 <TextBox Grid.Row="8" Grid.Column="5" Margin="2" Text="{Binding Apartment}"/>
 
                                 <TextBlock Grid.Row="9" Grid.Column="0" Margin="2"  Text="С "/>
-                                <DatePicker Grid.Row="9" Grid.Column="1" Grid.ColumnSpan="2" Margin="2" HorizontalAlignment="Stretch" SelectedDate="{Binding BeginDate}" BorderThickness="1"/>
-                                <TextBlock Grid.Row="9" Grid.Column="3" Margin="2" Text="по" />
-                                <DatePicker Grid.Row="9" Grid.Column="4" Margin="2" Grid.ColumnSpan="2" HorizontalAlignment="Stretch"  SelectedDate="{Binding EndDate}" BorderThickness="1" IsEnabled="{Binding WithEndDate}"/>
+                                <DatePicker Grid.Row="9" Grid.Column="1" Grid.ColumnSpan="2" Margin="2" HorizontalAlignment="Stretch" SelectedDate="{Binding BeginDate, ValidatesOnDataErrors=True}" Validation.ErrorTemplate="{DynamicResource ValidationTemplate}"
+                                            BorderThickness="1"/>
+                                <TextBlock Grid.Row="9" Grid.Column="3" Margin="2" Text="по" HorizontalAlignment="Right"/>
+                                <DatePicker Grid.Row="9" Grid.Column="4" Margin="2" Grid.ColumnSpan="2" HorizontalAlignment="Stretch"  SelectedDate="{Binding EndDate, ValidatesOnDataErrors=True}" Validation.ErrorTemplate="{DynamicResource ValidationTemplate}"
+                                            BorderThickness="1" IsEnabled="{Binding WithEndDate}"/>
 
                                 <CheckBox Grid.Row="10" Grid.Column="4" Grid.ColumnSpan="2" Margin="2" HorizontalAlignment="Stretch" Content="Бессрочно" BorderThickness="1" IsChecked="{Binding WithoutEndDate}"/>
                             </Grid>
